# optative

./: .gitignore  COOKBOOK.md  Cargo.toml  LICENSE-MIT  README.md  release-plz.toml
.esto/context/: b665314a651a.md  e7b6b9df481b.md
.github/workflows/: ci.yaml
crates/optative/: CHANGELOG.md  Cargo.toml
crates/optative-derive/: CHANGELOG.md  Cargo.toml  README.md
crates/optative-derive/src/: lib.rs
crates/optative-derive/tests/: ephemeral.rs  lifecycle_trace.rs
crates/optative-esto/: CHANGELOG.md  Cargo.toml  build.rs
crates/optative-esto/src/: builtins.rs  js_runtime.rs  jsx.rs  lib.rs  main.rs  registry.rs  types.rs  watch.rs
crates/optative-esto/src/builtins/: esto.rs  fs.rs  internal.rs  mod.rs
crates/optative-esto/src/js/: esto.mjs  esto_fs.mjs  esto_fs_globals.js  esto_globals.js  loader.mjs  runner.mjs
crates/optative-esto/tests/: cli.rs
crates/optative-process-pool/: CHANGELOG.md  Cargo.toml
crates/optative-process-pool/src/: lib.rs  process.rs  resource.rs  supervisor.rs
crates/optative-script/: CHANGELOG.md  Cargo.toml
crates/optative-script-mdx/: CHANGELOG.md  Cargo.toml
crates/optative-script-mdx/src/: lib.rs  lower.rs
crates/optative-script/src/: engine.rs  jsx.rs  lib.rs  loader.rs  runtime.rs  tags.rs
crates/optative-script/tests/: confined_loader.rs
crates/optative/src/: json_set.rs  lib.rs  reconcile.rs
crates/optative/tests/: json_set.rs  managed_set_tutorial.rs  optative_set_tutorial.rs  readme_examples.rs  with_initial_state.rs
crates/optative/tests/common/: mod.rs
docs/ideas/: agentic-codebase-substrate.md  authoring-model.md
examples/: grounding.eso.jsx  grounding.op.mdx  grounding.op.tsx  mirror.eso.jsx  mirror.mjs
tasks/: bar.md  foo.md
