[package]
name = "optative-derive"
version = "0.0.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for the optative reconciler library: #[lifecycle_trace] and #[derive(Ephemeral)]."
keywords = ["reconciler", "lifecycle", "macro", "derive", "optative"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"

[dev-dependencies]
optative = { version = "0.1.2", path = "../optative" }
serde_json = "1"
tracing = "0.1"
tracing-test = "0.2"
