[package]
name = "esto"
version = "0.0.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A generic hook-based reconciliation CLI (esto) built on the optative lifecycle traits."
keywords = ["reconciler", "hooks", "desired-state", "lifecycle", "cli"]
categories = ["command-line-utilities", "os::unix-apis"]

[[bin]]
name = "esto"
path = "src/main.rs"

[dependencies]
optative = { version = "0.1.2", path = "../optative" }
optative-script = { version = "0.0.3", path = "../optative-script" }
optative-process-pool = { version = "0.0.5", path = "../optative-process-pool" }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
rquickjs = { version = "0.11", features = ["loader"] }
sha2 = "0.10"
notify = "6"
glob = "0.3"

[build-dependencies]
ts-rs = "10"

[dev-dependencies]
tempfile = "3"
