[package]
name = "esto"
version = "0.0.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A CLI (esto) for running declarative .op.tsx/.eso.jsx reconciler scripts."
keywords = ["reconciler", "desired-state", "lifecycle", "cli", "jsx"]
categories = ["command-line-utilities", "os::unix-apis"]

[[bin]]
name = "esto"
path = "src/main.rs"

[dependencies]
optative-script = { version = "0.0.4", path = "../optative-script" }
thiserror = "2"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
rquickjs = { version = "0.11", features = ["loader"] }
sha2 = "0.10"
notify = "6"
glob = "0.3"

[build-dependencies]
ts-rs = "10"

[dev-dependencies]
tempfile = "3"
